@@ -7,6 +7,8 @@
 #define __z88dk_fastcall
 #endif
 
+/* __z88dk_fastcall is supported both on the caller and the callee side */
+
 unsigned char f1(unsigned char c) __z88dk_fastcall
 {
 	return c + 1;
@@ -21,6 +23,14 @@ unsigned long int f4(unsigned long int c) __z88dk_fastcall
 {
 	return c + 1;
 }
+
+/* __smallc and __z88dk_callee are currently only supported on the caller side */
+
+void s1(int x, int y) __smallc;
+
+void s2(int x, int y) __z88dk;
+
+void s3(int x, int y) __smallc __z88dk;
 
 void
 testZ88dk(void)
